--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-compress": "~0.6.1",
+    "grunt-rename": "~0.1.3"
   }
 }
