--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "win7-chromecast-gadgets",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-compress": "~0.6.1",
-    "grunt-rename": "~0.1.3"
+    "grunt": "0.4.2",
+    "grunt-contrib-watch": "0.5.3",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-compress": "0.6.1",
+    "grunt-rename": "0.1.3"
   }
 }
